# forum

./: .env  .gitignore  Cargo.toml  README.md
docs/: api_doc.md
migrations/2022-06-24-024140_names/: up.sql
migrations/2022-08-12-080110_add_posts/: down.sql  up.sql
migrations/2022-08-16-034148_add_floor_table/: down.sql  up.sql
migrations/2022-09-27-015105_posts/: down.sql  up.sql
migrations/2022-09-27-015759_users/: up.sql
migrations/2022-09-27-020136_floor_not_null_id/: down.sql  up.sql
migrations/2022-10-14-025228_add_extra_for_post/: down.sql  up.sql
migrations/2023-04-01-033033_users_posts_floors/: up.sql
migrations/2023-04-04-113501_table_id_auto_generate/: up.sql
migrations/2023-09-09-073058_add_post_user_create_time/: up.sql
migrations/2023-09-09-085410_change_salt_type_to_bytea/: up.sql
migrations/2023-09-18-121722_user_passwd_should_not_null/: up.sql
src/: account_tools.rs  app_state.rs  constants.rs  get_post.rs  helper.rs  index.rs  main.rs  models.rs  new_post.rs  register_login.rs  reply_post.rs  schema.rs  sqlx_helper.rs  tools.rs  user_utils.rs  utils.rs
src/entity/: floors.rs  mod.rs  posts.rs  prelude.rs  users.rs
templates/: index.html  post.html
