[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5", features = ["http2", "headers"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

tokio-util = { version = "0.7.3", features = ["io"]}
tokio-stream = {version = "0.1.9"}
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

diesel = {version = "2.0", features = ["sqlite", "r2d2"]}
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.1.2", features = ["v4"]}
dotenvy = "0.15"
tera = "1"
rand = "0.8"
openssl = "0.10"
