[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["http2"]}
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = "*"

tokio-util = { version = "*", features = ["io"]}
tokio-stream = {version = "*"}
tower-http = { version = "*", features = ["cors", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

diesel = {version = "2.0", features = ["postgres", "r2d2", "time"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
uuid = {version = "1.1.2", features = ["v4"]}
dotenvy = "0.15"
rand = "0.8"
openssl = "0.10"
time = {version = "0.3", features = ["serde"]}
